@@ -2,6 +2,8 @@
 
 - New: Compatibility for server version 4.0.1
 - New: Targeting Android 14
+- Improved: Changed that prices on the shopping list (extra fields) are now related to the selected
+  quantity unit (instead of to the product's QU stock as before) (change from server version 4.0.1)
 - Fixed: wrong title alignment in some list bottom sheets
 - Fixed: crash when product overview dialog is called when shopping lists feature is disabled
 
